# cherno

./: .gitignore  CMakeLists.txt  build.sh  build.zig  build.zig.zon  compile_flags.txt  imgui.ini  index_buffer.c  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  run.sh  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.c  vertex_array.cpp  vertex_array.h  vertex_buffer.c  vertex_buffer.h  vertex_buffer_element.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
res/shaders/: basic.fragment.shader  basic.vertex.shader  color.fragment.shader  color.vertex.shader
src/: error.cpp  error.h  index_buffer.cpp  index_buffer.h  index_buffer.zig  main.cpp  main.zig  renderer.cpp  renderer.h  renderer.zig  root.zig  shader.cpp  shader.h  shader.zig  texture.cpp  texture.h  texture.zig  vertex_array.cpp  vertex_array.h  vertex_array.zig  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer.zig  vertex_buffer_element.cpp  vertex_buffer_layout.cpp  vertex_buffer_layout.h
src/scenes/: batch_colors.cpp  batch_colors.h  batch_quads.cpp  batch_quads.h  scene.cpp  scene.h  square.cpp  square.h  textures_2D.cpp  textures_2D.h
